feat: working API with tests, updated core, and UI